popup: z-index fix

--- a/src/sass/_popups.sass
+++ b/src/sass/_popups.sass
@@ -40,7 +40,6 @@
 	border-radius: 4px
 	white-space: normal
 	vertical-align: middle
-	z-index: -1
 	&.is-active
 		display: inline-block
 	&.is-top
